--- a/Home/build.gradle
+++ b/Home/build.gradle
@@ -76,9 +76,17 @@ dependencies {
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
 
-    //Retrofit & OkHttp
-    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    //OkHttp
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
+
+    //retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation("com.squareup.retrofit2:adapter-rxjava2:2.9.0")
+    implementation("com.squareup.retrofit2:converter-scalars")
+    implementation("com.squareup.retrofit2:converter-gson:2.9.0")
+    implementation("com.squareup.retrofit2:adapter-rxjava2:2.9.0")
+    implementation("com.squareup.retrofit2:converter-scalars:2.9.0")
+    implementation("com.squareup.retrofit2:converter-gson:2.9.0")
 
 
     //Moshi (JSON mapping)
@@ -89,4 +97,7 @@ dependencies {
 
     implementation project(":app")
     implementation project(':Common')
+    implementation project(':Domain')
+    implementation project(':Model')
+    implementation project(':Service')
 }
