--- a/Home/build.gradle
+++ b/Home/build.gradle
@@ -2,12 +2,12 @@ plugins {
     id 'com.android.dynamic-feature'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-android'
+
 }
 apply plugin: 'kotlin-kapt'
 
-
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         minSdk 21
@@ -52,10 +52,11 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.6.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
@@ -94,6 +95,18 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
 
 
+    implementation 'com.google.android.exoplayer:exoplayer-core:2.15.0'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
+
+    //implementation 'com.google.api-client:google-api-client-android:1.30.9'
+    // implementation 'com.google.apis:google-api-services-drive:v3-rev305-1.25.0'
+
+    implementation platform('com.google.firebase:firebase-bom:32.0.0')
+    implementation 'com.google.firebase:firebase-storage-ktx'
+
+    implementation "androidx.media3:media3-exoplayer:1.0.2"
+    implementation "androidx.media3:media3-exoplayer-dash:1.0.2"
+    implementation "androidx.media3:media3-ui:1.0.2"
 
     implementation project(":app")
     implementation project(':Common')
